crates/telemetry-wrc-generations/tests/snapshots/snapshot_tests__wrc_heavy_braking_frame.snap
---
source: crates/telemetry-wrc-generations/tests/snapshot_tests.rs
assertion_line: 150
expression: norm
---
speed_ms: 12.625
steering_angle: 0.65
throttle: 0
brake: 0.88
clutch: 0
rpm: 4800
max_rpm: 7800
gear: 2
num_gears: 6
lateral_g: -1.8
longitudinal_g: -2.5
vertical_g: 0
slip_ratio: 0.1143931
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 220
  - 215
  - 180
  - 178
tire_pressures_psi:
  - 31
  - 30.8
  - 29.5
  - 29.3
ffb_scalar: -0.59999996
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 3
lap: 2
current_lap_time_s: 45.8
best_lap_time_s: 0
last_lap_time_s: 195.2
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.6875
engine_temp_c: 0
extended:
  rpm_fraction:
    type: Float
    value: 0.61538464
  wheel_speed_fl:
    type: Float
    value: 12
  wheel_speed_fr:
    type: Float
    value: 11.8
  wheel_speed_rl:
    type: Float
    value: 13.5
  wheel_speed_rr:
    type: Float
    value: 13.2
sequence: 0
